[gd_scene load_steps=15 format=2]

[ext_resource path="res://Knockback.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/VFX/vfx_fan.png" type="Texture" id=2]
[ext_resource path="res://Wind.gd" type="Script" id=3]
[ext_resource path="res://Sprites/VFX/vfx_fandust.png" type="Texture" id=5]

[sub_resource type="Curve" id=14]
resource_local_to_scene = true
min_value = 40.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, -89.2123, 0, 0, Vector2( 0.998447, 40 ), -106.045, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 85.5, 42.5 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.135484, 0.574194, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.705882, 1, 1, 1, 0.470588, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 2
emission_box_extents = Vector3( 70, 10, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -20.0
radial_accel_random = 1.0
angle = 20.0
angle_random = 1.0
color = Color( 0.517647, 0.478431, 0.34902, 1 )
color_ramp = SubResource( 19 )

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.767742, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.65098, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=20]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
color = Color( 0.462745, 0.427451, 0.309804, 1 )
color_ramp = SubResource( 22 )

[sub_resource type="Curve" id=15]
resource_local_to_scene = true
_data = [ Vector2( 0, 1 ), 0.0, -2.94286, 0, 0, Vector2( 1, 0 ), 0.158627, 0.0, 0, 0 ]

[sub_resource type="Curve" id=16]
resource_local_to_scene = true
_data = [ Vector2( 0, 1 ), 0.0, -2.16777, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Wind" type="Area2D" groups=["Animated"]]
position = Vector2( 0, -43 )
collision_layer = 0
collision_mask = 3
monitorable = false
script = ExtResource( 3 )
_range = 400
overwrite_knockback_force = true
knockback_over_distance = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -42.5 )
shape = SubResource( 2 )

[node name="WindParticles" type="Particles2D" parent="."]
position = Vector2( 0, -50 )
amount = 16
lifetime = 0.2
explosiveness = 0.2
process_material = SubResource( 17 )
texture = ExtResource( 2 )

[node name="FanDust" type="Particles2D" parent="."]
process_material = SubResource( 20 )
texture = ExtResource( 5 )

frame = 4
frame = 4
frame = 3
[node name="Knockback" parent="." instance=ExtResource( 1 )]
knockback_force = 22.0
vertical_multiplier = 0.9
movement_counter_force = 0.0
gravity_counter_force = 0.0
air_multiplier = 0.8
horizontal_knockback_multiplier_by_XVelocity = SubResource( 15 )
vertical_knockback_multiplier_by_YVelocity = SubResource( 16 )

[connection signal="body_entered" from="." to="." method="_on_Wind_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Wind_body_exited"]
